objects/zqu__ZFeature__c.object
<CustomObject>
    <description>The Zuora Feature Object.</description>
    <fields>
        <fullName>zqu__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__FeatureName__c</fullName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZFeature</label>
    <listViews>
        <fullName>zqu__All_Features</fullName>
        <columns>NAME</columns>
        <columns>zqu__ZuoraId__c</columns>
        <columns>zqu__Code__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__Description__c</columns>
        <columns>zqu__Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Features</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZFeatures</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>